Add replaceable and offset info